<resources>
    <string name="app_name">Projeto_Cmen_Gestor_Receitas_Lista_compras</string>
    <string name="titulo">Culinária Inteligente</string>
    <string name="btnReceitas">Gestor de Receitas</string>
    <string name="btnCompras">Lista de Compras</string>
    <string name="label_nome_receita">Nome da Receita</string>
    <string name="hint_nome">Nome</string>
    <string name="hint_minutos">Minutos</string>
    <string name="hint_porcoes">Porções</string>
    <string name="label_dificuldade">Dificuldade</string>
    <string name="label_categoria">Categoria</string>
    <string name="label_preparacao">Preparação</string>
    <string name="label_ingredientes">Ingredientes</string>
    <string name="hint_ingrediente_nome">Nome (ex: Arroz)</string>
    <string name="hint_qtd">Qtd</string>
    <string name="hint_adicionar">Adicionar</string>
    <string name="btn_guardar">GUARDAR RECEITA</string>
    <string name="msg_nenhum_ingrediente">Nenhum ingrediente adicionado.</string>
    <string name="btn_adicionar">+</string>
    <string name="hint_tempo">🕒 45 min</string>
    <string name="label_modo_preparacao">Modo de Preparação</string>
    <string name="btn_adicionar_lista">ADICIONAR À LISTA DE COMPRAS</string>
    <string name="btn_remover_receita">Remover receita</string>
    <string name="btn_voltar">Voltar</string>
    <string name="tv_detalhes">Detalhes da Receita</string>
    <string name="btn_editar">EDITAR</string>
    <string name="tv_editar_receita">Editar Receita</string>
    <string name="btn_atualizar_receita">ATUALIZAR RECEITA</string>
    <string name="btn_adicionar_nova_receita">ADICIONAR NOVA RECEITA</string>
    <string name="tv_nenhuma_receita_encontrada">Nenhuma receita encontrada.</string>
    <string name="hint_icone_descricao">icone descrição</string>
    <string name="msg_ingredientes_remover">Toque nos ingredientes para remover</string>
    <string name="hint_icone_voltar">icone voltar</string>
    <string name="tv_lista_de_ingredientes_edicao">Lista de ingredientes para edição</string>
    <string name="hint_img_nenhuma_receita">Nenhuma receita</string>
    <string name="hint_lista_temp">Toque para editar ou remover</string>
    <string name="btn_tentar_novamente">Tentar Novamente</string>
    <string name="hint_nome_do_novo_ingrediente">Nome do novo ingrediente</string>
    <string name="desc_procurar">procurar</string>
    <string name="btn_recarregar">Recarregar</string>
    <string name="hint_pre_vizualizacao_da_receita">pré-vizualização da receita</string>
    <string name="btn_selecionar_foto">Selecionar Foto</string>
    <string name="btn_alterar_foto_da_receita">Alterar Foto da Receita</string>
    <string name="lbl_lista_de_compras">Lista de Compras</string>
    <string name="btn_esvaziar_lista">Esvaziar Lista</string>
    <string name="lbl_lista_vazia">A lista está vazia.</string>
    <string name="desc_adicionar_item">Adicionar Item</string>
    <string name="desc_exportar_pdf">Exportar PDF</string>
    <string name="btn_sugerir_receita">Sugerir Receita</string>
    <string name="tv_sugestoes_de_receita">Sugestões de Receita</string>
    <string name="tv_analisar_ingredientes">A analisar os teus ingredientes…</string>
    <string name="btn_gerar_outra_vez">Gerar outra solução</string>
    <string name="btn_guardar_receita">Guardar Receita</string>
    <string name="msg_analisando_bd">A verificar a tua base de dados…</string>
    <string name="msg_lista_vazia_aviso">A tua lista de compras está vazia.</string>
    <string name="msg_matches_encontrados">Receitas encontradas na tua Base de Dados!</string>
    <string name="msg_gerando_ia">Sem matches na BD. O Chef IA está a cozinhar…</string>
    <string name="msg_ia_erro">A IA não conseguiu gerar uma receita.Tenta mais tarde.</string>
    <string name="msg_guardar_sucesso">Receita guardada!</string>
    <string name="msg_guardar_erro">Erro ao guardar receita</string>

    <string name="template_sugestao_ia">NOME: %1$s\n\nCATEGORIA: %2$s\nTEMPO: %3$d min\n\nINGREDIENTES:\n%4$s\n\nPREPARAÇÃO:\n%5$s</string>

    <string-array name="dificuldades">
        <item>baixa</item>
        <item>média</item>
        <item>alta</item>
    </string-array>

    <string-array name="categorias">
        <item>carne</item>
        <item>peixe</item>
        <item>vegetariana</item>
        <item>sobremesas</item>
        <item>outro</item>
    </string-array>
</resources>